<?xml version="1.0"?>
<package format="2">
  <name>interactive_marker_tf2</name>
  <version>1.0.0</version>
  <description>
    This package connects interactive markers with tf2.
  </description>
  
  <maintainer email="krukai@veemo.ink">Kai Krückel</maintainer>
  
  <license>BSD</license>
  
  <!--<url type="website">http://ros.org/wiki/interactive_marker_tf2</url>-->
  <url type="repository">https://github.com/krukai/interactive_marker_tf2</url>
  <url type="bugtracker">https://github.com/krukai/interactive_marker_tf2/issues</url>
  <author email="krukai@veemo.ink">Kai Krückel</author>

  <depend>geometry_msgs</depend>
  <depend>interactive_markers</depend>
  <depend>rospy</depend>
  <depend>tf2</depend>
  <depend>visualization_msgs</depend>
  <exec_depend>interactive_marker_tutorials</exec_depend>

  <buildtool_depend>catkin</buildtool_depend>
</package>
